fix spacing

--- a/frontend/src/components/UserProfilePage/UserProfile.css
+++ b/frontend/src/components/UserProfilePage/UserProfile.css
@@ -292,7 +292,7 @@
 .books{
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 33px;
     display: grid;
     column-gap: 35px;
     row-gap: 10px;
